--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Stochastic-Batman's addition
+.idea/
+.idea/*
+*.iml
+*.xml
+twinkleswarm_venv/
